[package]
authors = ["Yueduz <yueduz@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "flash-algo-hpm6364"
version = "0.1.0"

[dependencies]
flash-algorithm = { version = "0.4.0", default-features = false, features = [
    "erase-chip",
] }
panic-halt = "0.2.0"

# 将 path 替换为 git 仓库地址，并确保 feature 为 hpm6364
hpm-metapac = { git = "https://github.com/hpmicro-rs/hpm-metapac.git", features = ["hpm6364"] }

# defmt = "0.3.8"
# defmt-rtt = "0.4.1"

[features]
xpi0 = []
xpi1 = []

# this lets you use `cargo fix`!
[[bin]]
name = "flash-algo-hpm6364"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
